@@ -19,30 +19,17 @@ function Remove-EnvironmentVariable
     Removes an environment variable.
     
     .DESCRIPTION
-    Uses the .NET [Environment class](http://msdn.microsoft.com/en-us/library/z8te35sa) to remove an environment variable from the Process, User, or Machine scopes.
+    Uses the .NET [Environment class](http://msdn.microsoft.com/en-us/library/z8te35sa) to remove an environment variable from the Process, User, or Computer scopes.
     
-    The `-Scope` parameter should be a value from the [EnvironmentVariableTarget enumeration](http://msdn.microsoft.com/en-us/library/system.environmentvariabletarget.aspx), which is currently:
-    
-     * `Process`
-     * `User`
-     * `Machine`
-     
-    You can see the values by running:
-    
-         [Enum]::GetValues([EnvironmentVariableTarget])
-         
     Changes to environment variables in the User and Machine scope are not picked up by running processes.  Any running processes that use this environment variable should be restarted.
     
     .EXAMPLE
-    Remove-EnvironmentVariable -Name 'MyEnvironmentVariable' -Scope Process
+    Remove-EnvironmentVariable -Name 'MyEnvironmentVariable' -ForProcess
     
     Removes the `MyEnvironmentVariable` from the process scope.
     
     .LINK
     http://msdn.microsoft.com/en-us/library/z8te35sa
-    
-    .LINK
-    http://msdn.microsoft.com/en-us/library/system.environmentvariabletarget.aspx
     #>
     [CmdletBinding(SupportsShouldProcess=$true)]
     param(
@@ -51,15 +38,26 @@ function Remove-EnvironmentVariable
         # The environment variable to remove.
         $Name,
         
-        [Parameter(Mandatory=$true)]
-        # The scope where the variable should be removed.  Should be one of Process, User, or Machine.
-        [EnvironmentVariableTarget]
-        $Scope
+        [Parameter(Mandatory=$true,ParameterSetName='ForProcess')]
+        # Removes the environment variable for the current process.
+        [Switch]
+        $ForProcess,
+
+        [Parameter(Mandatory=$true,ParameterSetName='ForUser')]
+        # Removes the environment variable for the current user.
+        [Switch]
+        $ForUser,
+        
+        [Parameter(Mandatory=$true,ParameterSetName='ForMachine')]
+        # Removes the environment variable for the current computer.
+        [Switch]
+        $ForComputer
     )
     
-    if( $pscmdlet.ShouldProcess( "$Scope-level environment variable '$Name'", "remove" ) )
+    $scope = $pscmdlet.ParameterSetName -replace '^For',''
+    if( $pscmdlet.ShouldProcess( "$scope-level environment variable '$Name'", "remove" ) )
     {
-        [Environment]::SetEnvironmentVariable( $Name, $null, $Scope )
+        [Environment]::SetEnvironmentVariable( $Name, $null, $scope )
     }
 }
 
@@ -72,33 +70,20 @@ function Set-EnvironmentVariable
     .DESCRIPTION
     Uses the .NET [Environment class](http://msdn.microsoft.com/en-us/library/z8te35sa) to create or set an environment variable in the Process, User, or Machine scopes.
     
-    The `-Scope` parameter should be a value from the [EnvironmentVariableTarget enumeration](http://msdn.microsoft.com/en-us/library/system.environmentvariabletarget.aspx), which is currently:
-    
-     * `Process`
-     * `User`
-     * `Machine`
-     
-    You can see the values by running:
-    
-         [Enum]::GetValues([EnvironmentVariableTarget])
-    
     Changes to environment variables in the User and Machine scope are not picked up by running processes.  Any running processes that use this environment variable should be restarted.
     
     .EXAMPLE
-    Set-EnvironmentVariable -Name 'MyEnvironmentVariable' -Value 'Value1' -Scope Process
+    Set-EnvironmentVariable -Name 'MyEnvironmentVariable' -Value 'Value1' -ForProcess
     
     Creates the `MyEnvironmentVariable` with an initial value of `Value1` in the process scope, i.e. the variable is only accessible in the current process.
     
     .EXAMPLE
-    Set-EnvironmentVariable -Name 'MyEnvironmentVariable' -Value 'Value1' -Scope Machine
+    Set-EnvironmentVariable -Name 'MyEnvironmentVariable' -Value 'Value1' -ForComputer
     
     Creates the `MyEnvironmentVariable` with an initial value of `Value1` in the machine scope, i.e. the variable is accessible in all newly launched processes.
     
     .LINK
     http://msdn.microsoft.com/en-us/library/z8te35sa
-    
-    .LINK
-    http://msdn.microsoft.com/en-us/library/system.environmentvariabletarget.aspx
     #>
     [CmdletBinding(SupportsShouldProcess=$true)]
     param(
@@ -112,15 +97,26 @@ function Set-EnvironmentVariable
         # The environment variable's value.
         $Value,
         
-        [Parameter(Mandatory=$true)]
-        # The target where the variable should be added/set.
-        [EnvironmentVariableTarget]
-        $Scope
+        [Parameter(Mandatory=$true,ParameterSetName='ForProcess')]
+        # Sets the environment variable for the current process.
+        [Switch]
+        $ForProcess,
+
+        [Parameter(Mandatory=$true,ParameterSetName='ForUser')]
+        # Sets the environment variable for the current user.
+        [Switch]
+        $ForUser,
+        
+        [Parameter(Mandatory=$true,ParameterSetName='ForMachine')]
+        # Sets the environment variable for the current computer.
+        [Switch]
+        $ForComputer
     )
     
-    if( $pscmdlet.ShouldProcess( "$Scope-level environment variable '$Name'", "set") )
+    $scope = $pscmdlet.ParameterSetName -replace '^For',''
+    if( $pscmdlet.ShouldProcess( "$scope-level environment variable '$Name'", "set") )
     {
-        [Environment]::SetEnvironmentVariable( $Name, $Value, $Scope )
+        [Environment]::SetEnvironmentVariable( $Name, $Value, $scope )
     }
     
 }
